- frontend now with tailwind framework - messages now have timestamps

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Angular8SpringbootWebsocket</title>
+  <title>Websocket</title>
   <base href="/">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -18,7 +18,7 @@
   </script>
 </head>
 
-<body>
+<body class="bg-white dark:bg-slate-800  font-sans  ">
   <app-root></app-root>
 </body>
 
